--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,5 @@
 messages:
-  discord: "https://discord.server.com"
-  website: "https://www.server.com"
-  buy: "https://www.server.com"
-  store: "https://www.server.com"
+  discord: "&bhttps://discord.server.com"
+  website: "&chttps://www.server.com"
+  buy: "&dhttps://www.server.com"
+  store: "&ehttps://www.server.com"
